index.html has changed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <form action="./login.html">
         <h1>FREgistration Page</h1>
+        <h2>for new users</h2>
         <p>
             <input type="name" placeholder="Enter Name">
         </p>
